--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:title="Item"
         android:id="@+id/mni"
-        android:icon="@drawable/ic_action_add_to_cart"
+        app:actionLayout="@layout/cart_layout"
+
         app:showAsAction="ifRoom"/>
 
 
